counterapp/counterapp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: counterapp
  labels:
    app: counterapp
  namespace: counterapp
spec:
  ports:
    - port: 5000
  selector:
    app: counterapp
    tier: frontend
#  type: NodePort
